fdo#87031 Sidebar tabs not visible when Sidebar deck is shown

Change-Id: I292421770f02436819d1361c4ba9a6fa4dbaf35c
Reviewed-on: https://gerrit.libreoffice.org/13312
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit e9dd158a866e60ffa5e3724f4aafdfca793da80a)